--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ops Invoice Automation | Dashboard</title>
+  <title>Pela Terra Operations | Invoice Automation</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/lucide@latest"></script>
   <style>
@@ -13,7 +13,7 @@
 
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #f8fafc;
+      background-color: #ffffff;
     }
 
     .glass-card {
